Bug 50999. Make nsBindingManager keep track of nsIAnonymousContentCreator-generated content; simplify anonymous content cleanup dance by making nsIBindingManager::ChangeDocumentFor() method. r=dbaron,hyatt a=hyatt